--- a/lore/templates/auth/register.html
+++ b/lore/templates/auth/register.html
@@ -1,4 +1,9 @@
+<!--
+    This is a temporary register page that is not styled.
+-->
+
 {% extends "main/layout.html" %}
+
 {% block content %}
 <h1>Register</h1>
 <form method="POST">
